fixing smell issues